[gd_scene load_steps=9 format=2]

[ext_resource path="res://MobileRPG Resources/Images/Mobile RPG Mockup.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://MobileRPG Resources/Images/Dungeon.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Battle.gd" type="Script" id=4]
[ext_resource path="res://Themes/DefaultTheme.tres" type="Theme" id=5]
[ext_resource path="res://Scripts/PlayerStats.gd" type="Script" id=6]
[ext_resource path="res://Scripts/StatsPanel.gd" type="Script" id=7]

[sub_resource type="GDScript" id=1]

[node name="Battle" type="Node"]
script = ExtResource( 4 )

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 3 )

[node name="MobileRpgMockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.231373 )
position = Vector2( 45, 80 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 46, 30 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 3.0
margin_top = 47.0
margin_right = 87.0
margin_bottom = 70.0
script = ExtResource( 7 )

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_right = 25.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "HP
25"
align = 1
valign = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "AP
3"
align = 1
valign = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 58.0
margin_right = 84.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "MP
10"
align = 1
valign = 1

[node name="TextBoxPanel" type="Panel" parent="UI"]
margin_left = -2.0
margin_top = 137.0
margin_right = 92.0
margin_bottom = 162.0

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 10.0
margin_top = 72.0
margin_right = 82.0
margin_bottom = 136.0
columns = 2

[node name="SwordButton" type="Button" parent="UI/BattleActionButtons"]
margin_right = 32.0
margin_bottom = 13.0
rect_min_size = Vector2( 32, 13 )
text = "SWORD"
script = SubResource( 1 )

[node name="test" type="Button" parent="UI/BattleActionButtons"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 13.0
rect_min_size = Vector2( 32, 13 )

[node name="test2" type="Button" parent="UI/BattleActionButtons"]
margin_top = 17.0
margin_right = 32.0
margin_bottom = 30.0
rect_min_size = Vector2( 32, 13 )

[node name="test3" type="Button" parent="UI/BattleActionButtons"]
margin_left = 36.0
margin_top = 17.0
margin_right = 68.0
margin_bottom = 30.0
rect_min_size = Vector2( 32, 13 )

[node name="test4" type="Button" parent="UI/BattleActionButtons"]
margin_top = 34.0
margin_right = 32.0
margin_bottom = 47.0
rect_min_size = Vector2( 32, 13 )

[node name="test5" type="Button" parent="UI/BattleActionButtons"]
margin_left = 36.0
margin_top = 34.0
margin_right = 68.0
margin_bottom = 47.0
rect_min_size = Vector2( 32, 13 )

[node name="test6" type="Button" parent="UI/BattleActionButtons"]
margin_top = 51.0
margin_right = 32.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 13 )

[node name="test7" type="Button" parent="UI/BattleActionButtons"]
margin_left = 36.0
margin_top = 51.0
margin_right = 68.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 13 )

[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="on_death" from="Enemy" to="." method="_on_Enemy_on_death"]
[connection signal="pressed" from="UI/BattleActionButtons/SwordButton" to="." method="_on_SwordButton_pressed"]
